--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card-nlw-copa</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
     <header>
         <img src="assets/logo.svg" alt="logo da nlw copa">
     </header>
 
-    <div class="card" onclick="changeCard(event)">
+    <div class="card animate__animated animate__backInDown" onclick="changeCard(event)">
         <img src="https://github.com/MarceloHenriqueDoriaFigueiredo.png" alt="Imagem do Marcelo Figueiredo">
         <div class="info">
             <h1>Marcelo Figueiredo</h1>
